syntax = "proto3";
package irismod.oracle;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "mods.irisnet.org/modules/oracle/types";

// Feed defines the feed standard
message Feed {
  string feed_name = 1 [ (gogoproto.moretags) = "yaml:\"feed_name\"" ];
  string description = 2;
  string aggregate_func = 3
      [ (gogoproto.moretags) = "yaml:\"aggregate_func\"" ];
  string value_json_path = 4
      [ (gogoproto.moretags) = "yaml:\"value_json_path\"" ];
  uint64 latest_history = 5
      [ (gogoproto.moretags) = "yaml:\"latest_history\"" ];
  string request_context_id = 6 [
    (gogoproto.customname) = "RequestContextID",
    (gogoproto.moretags) = "yaml:\"request_context_id\""
  ];
  string creator = 7;
}

// FeedValue defines the feed result standard
message FeedValue {
  string data = 1;
  google.protobuf.Timestamp timestamp = 2
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
}
